# UCLouvain-Mecatro

./: Makefile  README.md
Control/: Makefile
Control/src/: main.c
DetectEnemy/: BUILD_AND_USAGE.md  CMakeLists.txt  DEVELOPER_REFERENCE.md  DetectEnemy.cpp  IMPLEMENTATION_SUMMARY.md  LidarSegmentation.cpp  LidarSegmentation.h  SerialLidar.cpp  SerialLidar.h  build.sh
Lidar/: Lidar_ankit.c  Position_angle_Lidar.py  plot_gui.py
MAP_HEHEHEHE/: robot_odo  robot_odo.c  visualizer.py
Odo/: global_plotter  global_plotter.cpp  robot_odo  robot_odo.c
PID/: PID  PID.c
Protocol/: commands.txt
Testing/: aruco_scan  aruco_scan.cpp  aruco_two  aruco_two.cpp  pwm  pwm.c
Vision/: vision.py
sensors/: lidar_read  lidar_read.c  odometry_encoders_read  odometry_encoders_read.c  read_sensors
src/: main.c
